# 2022-cpl-coding-2

./: CMakeLists.txt  LICENSE
0-intro/: guess.c  hello.c
1-types-io/: CMakeLists.txt  Circle.c  Mol.c  Sphere.c  admin-scanf.c  admin.c
10-double-pointers/: CMakeLists.txt  decl.c  echo.c  integrate.c  merge-pointers.c  scores.c  selection-sort-strings.c  sort.c
11-struct/: musician.c
12-linkedlist/: josephus.c
12-linkedlist/ll/: ll.c  ll.h
2-if-for-array/: CMakeLists.txt  leap-elseif.c  leap-if-else.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  binary-search.c  digits.c  numbers-sorted.md  numbers.md  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  bubble-sort.c  game-of-life.c  merge.c
5-function/: CMakeLists.txt  binary-search-2.0.c  game-of-life-transformed.c  guess2.0.c  leap2.0.c  merge2.0.c  palindrome2.0.c  primes2.0.c  selection-sort2.0.c  stars2.0.c
6-recursion/: CMakeLists.txt  bsearch-re.c  fib-iter.c  fib-re.c  gcd-re.c  mergesort.c  min-re.c  sum-re.c
7-data-types/: CMakeLists.txt  char.c  compare.c  explict-conversion.c  float-limits.c  implicit-conversion.c  int-limits.c  int-overflow.c  loop.c  sum-product.c  timing.c  unsigned.c
8-pointers/: CMakeLists.txt  radius-pointers.c  selections-sort-pointers.c
9-pointers-c-strings/: CMakeLists.txt  strcmp.c  strcpy.c  strlen.c
