add_executable(binary-search-2.0 binary-search-2.0.c)
add_executable(game-of-life-transformed game-of-life-transformed.c)
add_executable(guess2.0 guess2.0.c)
add_executable(leap2.0 leap2.0.c)
add_executable(merge2.0 merge2.0.c)
add_executable(palindrome2.0 palindrome2.0.c)
add_executable(primes2.0 primes2.0.c)
add_executable(selection-sort2.0 selection-sort2.0.c)
add_executable(stars2.0 stars2.0.c)
